objects/Account.object
<CustomObject>
    <fields>
        <fullName>Estado_Deudor__c</fullName>
        <label>Estado Deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estracto_Diario_Oficial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estracto Diario Oficial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FATCA_Information__c</fullName>
        <description>Este campo lo llena el Área Clientes solamente.</description>
        <label>Información FATCA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stock al 30/06/2014</fullName>
                </value>
                <value>
                    <fullName>Es US Person</fullName>
                </value>
                <value>
                    <fullName>No es US Person</fullName>
                </value>
                <value>
                    <fullName>Es FFI</fullName>
                </value>
                <value>
                    <fullName>Es US Entity</fullName>
                </value>
                <value>
                    <fullName>No es US Entity</fullName>
                </value>
                <value>
                    <fullName>Es Recalcitrante</fullName>
                </value>
                <value>
                    <fullName>Pendiente Ejecutivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_Channel__c</fullName>
        <description>vista 360</description>
        <label>Canal Preferido</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correo</fullName>
                </value>
                <value>
                    <fullName>Telefono</fullName>
                    <label>Teléfono</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_Constitucion_Empresa__c</fullName>
        <label>Fecha Constitución Empresa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_MAC_Apertura_Cuenta__c</fullName>
        <label>Fecha MAC Apertura Cuenta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Solicitud_Crear_Cliente__c</fullName>
        <label>Fecha Solicitud Crear Cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_apertura_cta_cte__c</fullName>
        <label>Fecha apertura cta cte</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_creacion_Sebra__c</fullName>
        <label>Fecha creación Sebra</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_conversi_n_a_cliente__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de conversión a cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_declaracion_de_margen__c</fullName>
        <label>Fecha de declaración de margen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_vencimiento_MAC__c</fullName>
        <label>Fecha de vencimiento MAC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_declaracion_jurada_art_85__c</fullName>
        <label>Fecha declaración jurada (art. 85)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_fin_relaci_n__c</fullName>
        <label>Fecha fin relación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_inicio_relaci_n__c</fullName>
        <label>Fecha inicio relación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_resultado_comit__c</fullName>
        <label>Fecha resultado comité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ficha_cuenta__c</fullName>
        <label>Ficha cuenta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filial_de_participacion__c</fullName>
        <label>Filial (% de participación)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Filled_Client_Data__c</fullName>
        <formula>(IF( ISPICKVAL(Cliente_BIA__c, &quot;&quot;),0,1)
+IF(ISBLANK(Ejecutivo_de_Inversiones__c),0,1)
+IF(ISPICKVAL(Perfil_de_Riesgo__c,&quot;&quot;),0,1)
+IF(ISBLANK(AUM__c),0,1))/4</formula>
        <label>Datos cliente completados</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Form_Art_85__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Art. 85</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_EESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. EESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_FATCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form.FATCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Ingreso_Maestro_de_Clientes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Ingreso Maestro de Clientes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Solicitud_de_Productos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Solicitud de Productos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giro_Inv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requerido para crear cliente en Sebra</description>
        <label>Giro</label>
        <referenceTo>Giro__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grupo_Deudor_Relacionado__c</fullName>
        <label>Grupo Deudor Relacionado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin Grupo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Buceo</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Ski</fullName>
                </value>
                <value>
                    <fullName>Snowboard</fullName>
                </value>
                <value>
                    <fullName>Windsurf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HouseHoldName__c</fullName>
        <formula>LOWER(FirstName+LastName+RUT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HouseHoldName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseHold_Creado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HouseHold Creado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HouseHold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HouseHold</label>
        <referenceTo>BICE_HouseHold__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INT_Error_Message__c</fullName>
        <description>This field is used to store any integration error</description>
        <label>INT Error Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idea_de_negocio__c</fullName>
        <label>Idea de negocio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash management</fullName>
                </value>
                <value>
                    <fullName>Comex</fullName>
                </value>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>Cursar inversiones</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Mesa de dinero</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Info_adicional_Inv_Depto__c</fullName>
        <label>Info adicional Inv (Depto,...)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_adicional_Inv_Oficina__c</fullName>
        <label>Info adicional Inv (Oficina,...)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacion_adicional_comercial__c</fullName>
        <label>Información adicional comercial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacion_privilegiada_Cargo_SVS_171__c</fullName>
        <label>Información privilegiada (Cargo SVS 171)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacion_privilegiada__c</fullName>
        <label>Información privilegiada</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integracion_sebra__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sirve para identificar cuando un cliente se este creando en Sebra y no genere llamando a integracion 10.</description>
        <label>Integracion sebra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intereses__c</fullName>
        <label>Intereses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inv_Tipo_Cliente__c</fullName>
        <description>Inversiones: Campo que se mostrara en vista 360.</description>
        <label>Tipo Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investment_Executive_Code__c</fullName>
        <description>Investment Executive Code, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <formula>Ejecutivo_de_Inversiones__r.ROL_Number__c</formula>
        <label>Investment Executive Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KYC_Aprobado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYC Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lugar_de_Nacimiento__c</fullName>
        <label>Lugar de Nacimiento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Afganistán</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alemania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua y Barbuda</fullName>
                </value>
                <value>
                    <fullName>Arabia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argelia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaiyán</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladés</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Baréin</fullName>
                </value>
                <value>
                    <fullName>Bélgica</fullName>
                </value>
                <value>
                    <fullName>Belice</fullName>
                </value>
                <value>
                    <fullName>Benín</fullName>
                </value>
                <value>
                    <fullName>Bielorrusia</fullName>
                </value>
                <value>
                    <fullName>Birmania</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botsuana</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Brunéi</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDR__c</fullName>
        <description>Indicador de Rentabilidad utilizado por Banca Personas y Banca Empresas</description>
        <label>MDR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medios_de_pago_para_productos_CDB__c</fullName>
        <label>Medios de pago para productos CDB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modalidad_de_operaci_n__c</fullName>
        <label>Modalidad de operación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modelo_facturaci_n__c</fullName>
        <label>Modelo facturación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facturación Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monto_MAC_creado__c</fullName>
        <label>Monto MAC aprobado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monto_Preaprobado__c</fullName>
        <description>Monto preaprobado para despliegue de campañas vigentes en vista 360.</description>
        <label>Monto Preaprobado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_cuenta_bancaria__c</fullName>
        <label>N° cuenta bancaria</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_de_cuenta__c</fullName>
        <label>N° de cuenta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_RUT__c</fullName>
        <description>To show in the top of the page, name, family name, and RUT</description>
        <formula>If  (OR(RecordType.DeveloperName=&quot;PersonAccount&quot;,RecordType.DeveloperName=&quot;Cuentas_personales_en_CIF&quot;), FirstName  &amp;&quot; &quot;&amp; LastName&amp; &quot; &quot; &amp; Apellido_materno__pc &amp; &quot; - &quot; &amp; 
&quot; RUT:&quot; &amp;RUT__c, Name &amp; &quot; - &quot; &amp;&quot;RUT:&quot; &amp;&quot; &quot;&amp; RUT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre RUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nacionalidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chile</fullName>
                    <default>true</default>
                    <label>Chile</label>
                </value>
                <value>
                    <fullName>Afganistan</fullName>
                </value>
                <value>
                    <fullName>Åland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alemania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguila</fullName>
                </value>
                <value>
                    <fullName>Antigua y Barbuda</fullName>
                </value>
                <value>
                    <fullName>Antillas Holandesas</fullName>
                </value>
                <value>
                    <fullName>Arabia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argelia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaiyan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrein</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgica</fullName>
                </value>
                <value>
                    <fullName>Belice</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bielorrusia</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia y Herzegovina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_Riesgo_de_la_Cartera__c</fullName>
        <label>Nivel de Riesgo de la Cartera</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nombre_Factoring__c</fullName>
        <label>Nombre Factoring</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombres__c</fullName>
        <description>Solo para creacion PJ Inversiones</description>
        <label>Nombres RL</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_calle_RL__c</fullName>
        <inlineHelpText>Ingrese número de calle de representante legal.</inlineHelpText>
        <label>Número calle RL</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_calle_comercial_Inv__c</fullName>
        <label>Número calle comercial Inv</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_calle_particular_Inv__c</fullName>
        <label>Número calle particular Inv</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_comercial__c</fullName>
        <label>Número calle comercial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_GIN__c</fullName>
        <label>Número de GIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_TIN__c</fullName>
        <label>Número de TIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_particular__c</fullName>
        <label>Número calle particular</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observacion_Area_Cliente__c</fullName>
        <label>Observación Área Cliente</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Obtener_Foto_y_Huellas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obtener Foto y Huellas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Number__c</fullName>
        <description>Office Number, used in customer creation form for Personas Naturales and Personas Jurídicas</description>
        <label>Office Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oportunidaes__c</fullName>
        <label># Oportunidaes</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Cerrada Ganada, Cerrada Perdida</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Otra_idea_de_negocio__c</fullName>
        <label>Otra idea de negocio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otras_Sociedades__c</fullName>
        <label>Otras Sociedades</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No tiene otras sociedades</fullName>
                </value>
                <value>
                    <fullName>Tiene otras sociedades: Se adjuntan antecedentes y malla de empresas relacionadas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Otro_telefono_Comercial_Inv__c</fullName>
        <label>Otro teléfono comercial Inv</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pa_s_Casa_Matriz__c</fullName>
        <label>País Casa Matriz</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pais</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pa_s_de_Constituci_n__c</fullName>
        <label>País de Constitución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pais</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pais_RL__c</fullName>
        <label>Pais RL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Afganistán</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alemania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua y Barbuda</fullName>
                </value>
                <value>
                    <fullName>Arabia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argelia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaiyán</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladés</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Baréin</fullName>
                </value>
                <value>
                    <fullName>Bélgica</fullName>
                </value>
                <value>
                    <fullName>Belice</fullName>
                </value>
                <value>
                    <fullName>Benín</fullName>
                </value>
                <value>
                    <fullName>Bielorrusia</fullName>
                </value>
                <value>
                    <fullName>Birmania</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botsuana</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Brunéi</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pais_comercial_Inv__c</fullName>
        <label>País comercial Inv</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chile</fullName>
                    <default>true</default>
                    <label>Chile</label>
                </value>
                <value>
                    <fullName>Afganistán</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alemania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua y Barbuda</fullName>
                </value>
                <value>
                    <fullName>Arabia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argelia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaiyán</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladés</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Baréin</fullName>
                </value>
                <value>
                    <fullName>Bélgica</fullName>
                </value>
                <value>
                    <fullName>Belice</fullName>
                </value>
                <value>
                    <fullName>Benín</fullName>
                </value>
                <value>
                    <fullName>Bielorrusia</fullName>
                </value>
                <value>
                    <fullName>Birmania</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botsuana</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Brunéi</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pais_comercial__c</fullName>
        <label>País comercial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pais</valueSetName>
        </valueSet>
    </fields>
</CustomObject>